<resources>
    <string name="app_name">Book App</string>
    <string name="app_name1">Thiết kể bởi Nhóm 9</string>
    <string name="login">Login</string>
    <string name="new_user_singup">Người dùng mới ? <b>Đăng ký</b></string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="name">Tên</string>
    <string name="confirmpassword">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="dashboard_admin">Trang Admin</string>
    <string name="dashboard_user">Trang người dùng</string>
    <string name="addcategory">+ Thêm danh mục sách</string>
    <string name="addnewcategory">Thêm danh mục mới</string>
    <string name="submit">Tạo</string>
    <string name="category">Danh mục sách</string>
    <string name="descriptionCategory">Nội dung sách</string>
    <string name="add_sach">Thêm một cuốn sách mới</string>
    <string name="upload">Cập nhật</string>
    <string name="titlecategory">Tiêu đề sách</string>
    <string name="size">Size</string>
    <string name="Date">dd/MM/yyyy</string>
    <string name="book">Book</string>
    <string name="categorys">Category</string>
    <string name="category_title">category_title</string>
    <string name="tac_gia">Tác giả</string>
    <string name="edit_sach">Chỉnh sửa thông tin sách</string>
    <string name="luu">Lưu</string>
    <string name="sharebook">Chia sẻ sách</string>
    <string name="detail_book">Sách chi tiết</string>
    <string name="n_a">N/A</string>
    <string name="view">Lượt xem</string>
    <string name="downloads">Downloads</string>
    <string name="descriptionbook">Mô tả của cuốn sách</string>
    <string name="read">Đọc</string>
    <string name="read_book">Đọc sách</string>
    <string name="n_n">N/N</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="huongdan">Nhập địa chỉ email đã đăng ký của bạn để nhận hướng dẫn đặt lại mật khẩu của bạn</string>
    <string name="appname">Chào mừng bạn đến với app BOOK</string>
    <string name="pages">Trang</string>
    <string name="favorite">Yêu thích</string>
    <string name="editprofile">Chỉnh sửa hồ sơ</string>
    <string name="membersince">Thành viên</string>
    <string name="account">Tài khoản</string>
    <string name="hoten">Họ và tên</string>
    <string name="profile">Hồ sơ</string>
    <string name="favoritebook">Sách yêu thích</string>
    <string name="accountstatus">Trạng thái tài khoản</string>
    <string name="chuaxacminh">Chưa xác minh</string>
    <string name="add_comment">Thêm bình luận</string>
    <string name="comment">Bình luận</string>
    <string name="nhanxet">Nhận xét thực tế được thêm bởi một số người dùng</string>
    <string name="year">Năm</string>
    <string name="brand">Chuyên ngành - lĩnh vực</string>
    <string name="dashboard_userbrand">Trang người dùng-chuyên ngành</string>
    <string name="read_books">Đọc văn bản bằng giọng nói</string>
    <string name="off">OFF</string>
    <string name="speak">Nói</string>
    <string name="texttospeech">Lưu ý: Ở đây các bạn copy 1 đoạn văn bản bên ngoài hay các bạn lấy những file PDF sách các bạn đã upload, các bạn copy vào đây cho nó đọc và xuất file mp3 để nghe lại. Và khi các bạn muốn nghe lại file mp3 các bạn có thể vào mục profile có nút button mp3 để nghe lại. Xin cảm ơn các bạn</string>
    <string name="report">Báo cáo</string>
    <string name="huybook">Hủy</string>
    <string name="report1">Xem thông tin báo cáo</string>
    <string name="spam">Đây là spam</string>
    <string name="viphambanquyen">Vi phạm bản quyền</string>
    <string name="baoluc">Bạo lực hoặc tổ chức nguy hiểm</string>
    <string name="chongphadangnhanuoc">Chống phá Đảng và Nhà nước</string>
    <string name="sachbiloi">Sách bị lỗi và biên soạn không đúng</string>
    <string name="brand_congnghe">Công nghệ</string>
    <string name="taikhoan">Đăng ký tài khoản mới</string>
    <string name="usertype">Loại tài khoản</string>
    <string name="major">Sách chuyên ngành lĩnh vực</string>
    <string name="call">Gọi điện</string>
    <string name="sms">Trang Gửi tin nhắn</string>
    <string name="phone">Số điện thoại</string>
    <string name="goi">Gọi</string>
    <string name="quayso">Quay số</string>
    <string name="guisms">Gửi sms</string>
    <string name="ktsmstruockhigui">Kiểm tra sms trước khi gửi</string>
    <string name="luuy">Xin lưu ý: Số điện thoại mặc định ở trên là của chủ app book này, nếu gặp trục trặc về vấn đề khi sử dụng app có thể gọi cho tôi. Gọi điện có mục đích, tránh lạm dụng. Và gọi tôi khi cần thiết.</string>
    <string name="sdt">0939570046</string>
    <string name="xulyreport">Xử lý report</string>
    <string name="viewreport">Thông tin báo cáo sách</string>
    <string name="mp3">Audio</string>
    <string name="noi_dung_bao_cao">Nội dung báo cáo</string>
    <string name="file_text_to_speech">Lưu ý: Ở đây là tất cả file đọc văn bản bằng giọng nói, xin lưu ý file ở đây dạng mp3, nên có 1 số điện thoại cũ nó sẽ không tương thích, nếu chưa thấy file có thể mở thư mục Downloads/AppBook trong bộ nhớ điện thoại bạn nhá. xin cảm ơn.</string>
    <string name="no_file">"Không có tập tin "</string>
    <string name="ten_file">Tên file</string>
    <string name="Music">File Đọc văn bản bằng giọng nói</string>
    <string name="Music1">Bấm vào đây để chuyển sang trang File Đọc văn bản bằng giọng nói</string>
    <string name="all">Tất cả sách</string>
    <string name="collection">Tổng hợp sách</string>
    <string name="timkiem">Tìm kiếm trên app book</string>
    <string name="goiy">Gợi ý</string>
    <string name="timkiemsach">Tìm kiếm sách</string>
    <string name="tatca">Tất cả</string>
    <string name="trangchu">Trang chủ</string>
    <string name="khamphasach">Khám phá app book</string>
    <string name="download">Lượt tải</string>
    <string name="orderfragment">Oder Fragment</string>
    <string name="reports">Xem báo cáo sách</string>
    <string name="edit_category">Chỉnh sửa Danh mục</string>
    <string name="reports_admin">Trang Quản lý báo cáo</string>
    <string name="notification">Thông báo</string>
    <string name="usertpye">Loại tài khoản</string>
    <string name="chucnangdangphattrien">Chức năng đang nghiên cứu thêm và phát triển</string>

</resources>