<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray02">

            <!--Pdf view-->
            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <!--Progress bar-->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/titlecategory" />

        <TextView
            android:id="@+id/authorTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tac_gia" />
        <TextView
            android:id="@+id/majorTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/authorTv"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/brand" />

        <TextView
            android:id="@+id/yearTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/majorTv"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/year" />

        <TextView
            android:id="@+id/decscriptionTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/yearTv"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/pdfRl"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descriptionCategory" />

        <TextView
            android:id="@+id/categoryTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/category"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/sizeTv"
            android:layout_marginTop="5dp"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/size" />

        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/categoryTv"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:layout_toEndOf="@id/sizeTv"
            android:text="@string/Date"
            android:maxLines="1"/>

        <ImageButton
            android:id="@+id/moreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_more_black" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>