<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Pdf thubnail, progress bar-->
        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray02">

            <!--PdfView-->
            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <!--Progressbar-->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/titlecategory"/>

        <ImageButton
            android:id="@+id/removeFavBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_favorite_white"
            app:tint="@color/black" />
        <TextView
            android:id="@+id/authorTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTv"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:layout_toEndOf="@id/pdfRl"
            android:text="@string/tac_gia"/>

        <TextView
            android:id="@+id/decscriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_below="@+id/authorTv"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:layout_toEndOf="@id/pdfRl"
            android:text="@string/descriptionCategory"/>

        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:text="@string/category"/>

        <TextView
            android:id="@+id/sizeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/size"/>

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/sizeTv"
            android:layout_toStartOf="@id/categoryTv"
            android:maxLines="1"
            android:textAlignment="center"
            android:text="@string/Date"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>