<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AudioTextToSpeechActivity">
    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">


        <!--Back-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />


        <!--Title-->
        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/read_books"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />



    </RelativeLayout>

    <ScrollView
        android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textTil"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/textEt"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_text_white"
                    android:drawablePadding="10dp"
                    android:hint="@string/texttospeech"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp">

        <Button
            android:id="@+id/btnSpeak"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_speak"
            android:drawablePadding="5dp"
            android:text="@string/speak" />

        <Button
            android:id="@+id/btnOff"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_not_speak"
            android:drawablePadding="5dp"
            android:layout_marginLeft="100dp"
            android:text="@string/off" />

        <Button
            android:id="@+id/btnMP3"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:drawableLeft="@drawable/ic_mp3"
            android:drawablePadding="5dp"
            android:text="@string/mp3" />
    </RelativeLayout>

</RelativeLayout>