<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MusicActivity">
    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shape_toolbar02">


        <!--Back-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />


        <!--Title-->
        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/Music"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--Email-->
        <TextView
            android:id="@+id/toolbarEmailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTitleTv"
            android:layout_centerHorizontal="true"
            android:text="@string/n_n"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <!--Email-->
        <TextView
            android:id="@+id/toolbarNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarEmailTv"
            android:layout_centerHorizontal="true"
            android:text="@string/n_n"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_songs_text"
        android:text="@string/no_file"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/songs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view_music"
        android:text="@string/file_text_to_speech"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />


</RelativeLayout>