<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rec02"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--back-->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:src="@drawable/ic_back_white"
        app:tint="@color/black"/>

    <!--Title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/add_comment"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <!--Input comment-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backBtn"
        android:layout_marginTop="20dp"
        android:hint="@string/comment"
        app:startIconDrawable="@drawable/ic_comment_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:inputType="textCapSentences|textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commentTil"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button01"
        android:text="@string/upload"
        android:textColor="@color/white"/>



</RelativeLayout>