<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ReportActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/attachBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_view_white" />

        <!--back-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />

        <!--logo-->
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />

        <!--Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/report"
            android:textColor="@color/white"
            android:textSize="28sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRl"
        android:text="Vui lòng tích chọn nội dung báo cáo bên dưới"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spam"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk1"
                android:text="@string/viphambanquyen"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chk3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk2"
                android:text="@string/baoluc"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chk4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk3"
                android:text="@string/chongphadangnhanuoc"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chk5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk4"
                android:text="@string/sachbiloi"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chk6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk5"
                android:text="Thông tin sai sự thật"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chk7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk6"
                android:text="Chỉ là tôi không thích nội dung này"
                android:textSize="16sp" />

            <Button
                android:id="@+id/reportBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chk7"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/report"
                android:textColor="@color/white" />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>